--- a/blog/2025-05-14-bluefin-f42.md
+++ b/blog/2025-05-14-bluefin-f42.md
@@ -1,11 +1,7 @@
 --- 
 title: Bluefin is now based on Fedora 42 / Universal Blue Updates 
 slug: bluefin-f42
-authors:
-  - name: Jorge O. Castro
-    title: Dinosaur Guy
-    url: https://github.com/castrojo
-    image_url: https://github.com/castrojo.png
+authors: castrojo
 tags: [announcements]
 ---
 
