--- a/blog/2024-12-30-ublue-2024-wrapup.md
+++ b/blog/2024-12-30-ublue-2024-wrapup.md
@@ -1,11 +1,7 @@
 --- 
 title: Universal Blue 2024 Wrap Up
 slug: ublue-2024
-authors:
-  - name: Jorge O. Castro
-    title: Dinosaur Guy
-    url: https://github.com/castrojo
-    image_url: https://github.com/castrojo.png
+authors: castrojo
 tags: [announcements]
 ---
 
