--- a/blog/2025-05-14-bluefin-f42.md
+++ b/blog/2025-05-14-bluefin-f42.md
@@ -90,9 +90,9 @@ We are **not out of the woods** yet, but we’re making significant progress so 
 
 ### Documentation Improvements
 
-:::note
+:::note[No raptor left behind...]
 
-Note: Bluefin GTS users will also get this documentation update.
+Bluefin GTS users will also get this documentation update.
 
 :::
 
