--- a/blog/2025-05-14-bluefin-f42.md
+++ b/blog/2025-05-14-bluefin-f42.md
@@ -106,9 +106,9 @@ Note that we will replace the Yelp help application with a link to this doc, whi
 
 We will also replace the Documentation shortcut in the logo menu with this instead so that documentation will always be browsable when offline. The blue u shortcut to the online docs will remain in the menu unchanged. We hope to finish this up soon.
 
-:::note
+:::note[Nice.]
 
-The PDF is built every time we update the docs and is copied over as part of the build process, so your offiline documentation will _always_ be up to date.
+The PDF is built every time we update the docs and is copied over as part of the build process, so your offline documentation will _always_ be up to date.
 
 :::
 
