Revert the changes all the way back to fcded35ff7e707b7e9216a7e1ceeb3f69d5ddb2d

--- a/blog/2025-05-14-bluefin-f42.md
+++ b/blog/2025-05-14-bluefin-f42.md
@@ -90,7 +90,11 @@ We are **not out of the woods** yet, but we’re making significant progress so 
 
 ### Documentation Improvements
 
-> Note: Bluefin GTS users will also get this documentation update.
+:::note[No raptor left behind...]
+
+Bluefin GTS users will also get this documentation update.
+
+:::
 
 We really spent a ton of time on the docs this cycle. I consider them mostly feature complete now. [docs.project.bluefin](https://docs.projectbluefin.io/) is always linked from your terminal motd too. 😄
 
@@ -102,7 +106,11 @@ Note that we will replace the Yelp help application with a link to this doc, whi
 
 We will also replace the Documentation shortcut in the logo menu with this instead so that documentation will always be browsable when offline. The blue u shortcut to the online docs will remain in the menu unchanged. We hope to finish this up soon.
 
-> The PDF is built every time we update the docs and is copied over as part of the build process, so your offiline documentation will _always_ be up to date.
+:::note[Nice.]
+
+The PDF is built every time we update the docs and is copied over as part of the build process, so your offline documentation will _always_ be up to date.
+
+:::
 
 ### ARM Image
 
@@ -209,9 +217,13 @@ The chart is the same, all the numbers are cut in half though. If we look at the
 
 It’s fine, I mean sure, it sucks to know your userbase is half of what you thought it was, but let’s look at what the team principal at Williams F1 has to say:
 
-> Data, for me, is the foundation of F1. There’s no human judgment involved. You’ve got to get your foundation right in data.
->
-> – [James Vowles](https://www.youtube.com/watch?v=nYzwvTSffiY&t=1025s)
+:::tip
+
+Data, for me, is the foundation of F1. There's no human judgment involved. You've got to get your foundation right in data.
+
+-- [James Vowles](https://www.youtube.com/watch?v=nYzwvTSffiY&t=1025s)
+
+:::
 
 So error corrected, and the big takeaway from this is to remember, the _contribution metrics_ are the key to our success. The Atomic universe is half the size we thought it was, but at least we’re consistent with each other and understanding that measuring this stuff is the key to long term success, despite the occasional bummer. We’ve always been about the slow burn, and you probably know how much we thrive under the radar anyway.
 
