Add Homebrew Packages section to analytics documentation

--- a/docs/analytics.mdx
+++ b/docs/analytics.mdx
@@ -58,3 +58,7 @@ Since Bluefin is an [Universal Blue](https://universal-blue.org) image, it lever
 **Shared Packages**
 
 ![Alt](https://repobeats.axiom.co/api/embed/8bde34be4a2fcd7f506672742563f330d0b6b240.svg "Repobeats analytics image")
+
+**Homebrew Packages**
+
+![Alt](https://repobeats.axiom.co/api/embed/c4eb0b1a3a2baeb3cdb87b3a463a98e21e78eafc.svg "Repobeats analytics image")
