Add documentation updates section to analytics.md
Added documentation updates section with analytics images.

--- a/docs/analytics.mdx
+++ b/docs/analytics.mdx
@@ -62,3 +62,7 @@ Since Bluefin is an [Universal Blue](https://universal-blue.org) image, it lever
 **Homebrew Packages**
 
 ![Alt](https://repobeats.axiom.co/api/embed/c4eb0b1a3a2baeb3cdb87b3a463a98e21e78eafc.svg "Repobeats analytics image")
+
+**Documentation Updates**
+
+![Alt](https://repobeats.axiom.co/api/embed/eaacd4fda2c3d80969675a0ac8985986a84ffc4d.svg "Repobeats analytics image")
